Some final overflow issue fixes

--- a/packages/MJExplorer/src/styles/_common.scss
+++ b/packages/MJExplorer/src/styles/_common.scss
@@ -19,7 +19,7 @@ a {
 
 button.preferences-button {
     position: absolute;
-    top: -31px;
+    top: 15px;
     right: 15px;
     z-index: 9999;
     background: var(--mj-blue);
